--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ border-top: #D8D8D8 3px solid;
 }
       </style>
    </head>
-   <body style="background-color: #ffe066;" >
+   <body style="background-color: #ffe066;">
       <header style="position:fixed;top:0px;width:100%;">
         <aside id="branding" style="float:left; height:20px;width:250px;margin-top:0px;">
                <a href="http://www.iiits.ac.in" target="iframe1" title="click here to visit IIIT sticity site">
@@ -147,22 +147,75 @@ border-top: #D8D8D8 3px solid;
         </aside> 
          <section class="container">
             <div id="branding1">
-             <a href="http://www.iiits.ac.in" target="iframe1"><h1 style="text-align:center;padding-right: 280px" title="click here to visit IIIT sticity site">Indian Institute of Information Technology, Sri City</h1></a>
+             <a href="http://www.iiits.ac.in" target="iframe1"><h1 style="text-align:center;margin-right: 50px" title="click here to visit IIIT sticity site">Indian Institute of Information Technology, Sri City</h1></a>
             </div>
             <nav>
                <ul>
                   <li>
-                     <a href="index.html" title="HOME">HOME</a> &nbsp;&nbsp;&nbsp;&nbsp;<a href="#last" title="ABOUT">ABOUT</a>&nbsp;&nbsp;&nbsp;&nbsp; <a href="#" title="SERVICES">SERVICES</a>&nbsp;&nbsp;&nbsp;&nbsp;  <a href="contact.html" title="CONTACT US" target="iframe1">CONTACT US</a>
+                     <a href="index.html" title="HOME">HOME</a> &nbsp;&nbsp;&nbsp;&nbsp;<a href="#last" title="ABOUT">ABOUT</a>&nbsp;&nbsp;&nbsp;&nbsp; <a href="#" title="SERVICES">SERVICES</a>&nbsp;&nbsp;&nbsp;&nbsp;  <a href="contact.html" title="CONTACT US" target="iframe1">CONTACT US</a>&nbsp;&nbsp;&nbsp;&nbsp;<a onclick="document.getElementById('id01').style.display='block'">Login</a>&nbsp;&nbsp;&nbsp;&nbsp;<a onclick="document.getElementById('id02').style.display='block'">Sign Up</a>
                   </li>
                </ul>
-            </nav>     
-         </section>         
+            </nav>      
+         </section>  
+<div id="id01" class="modal">
+  
+  <form class="modal-content animate" action="/action_page.php">
+    <div class="imgcontainer">
+      <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal" style="display:relative">&times;</span>
+    </div>
+
+    <div class="container">
+      <label for="uname"><p style="color:black;"><b>Username</b></p></label>
+      <input type="text" placeholder="Enter Username" name="uname" required autofocus>
+
+      <label for="psw"><p style="color:black;"><b>Password</p></b></label>
+      <input type="password" placeholder="Enter Password" name="psw" required>
+        
+      <button type="submit">Login</button>
+      <label>
+        <input type="checkbox" checked="checked" name="remember"><span style="color:black;"> Remember me</span>
+      </label>
+	  </div>
+     <div class="container" style="background-color:#f1f1f1">
+      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+      <span class="psw" style="color:black;">Forgot<a href="#" style="color:blue;text-transform: lowercase;"> password?</a></span>	
+    </div>
+  </form>
+</div>  
+<div id="id02" class="modal">
+  <form class="modal-content" action="/action_page.php">
+    <div class="container">
+      <h1  style="color:black;">Sign Up<span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span></h1>  
+      <p style="color:black;">Please fill in this form to create an account.</p>
+      <hr>
+      <label for="email"><p style="color:black;"><b>Email</b></p></label>
+      <input type="text" placeholder="Enter Email" name="email" required>
+
+      <label for="psw"><p style="color:black;"><b>Password</b></p</label>
+      <input type="password" placeholder="Enter Password" name="psw" required>
+
+      <label for="psw-repeat"><p style="color:black;"><b>Repeat Password</b></p></label>
+      <input type="password" placeholder="confirm your Password" name="psw-repeat" required>
+      
+      <label>
+        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:5px;color: black;"><span style="color:black;">Remember me</span>
+      </label>
+
+      <p  style="color:black;">By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+
+      <div class="clearfix">
+        <button type="button" onclick="document.getElementById('id02').style.display='none'" class="cancelbtn">Cancel</button>
+        <button type="submit" class="signupbtn">Sign Up</button>
+      </div>
+    </div>
+  </form>
+</div>     
       </header>
       <center style="margin-top: 150px;" class="box1">
       <h2 style="text-align:center;width: 25%">Welcome to IIITS clubs portal</h2>
       <p title="click on below icons to know more about them" style="text-align:center;font-size: 0.7em">(click on below icons to know more about them)</p>
          <section id="boxes" margin="auto">
-            <div class="container">
+            <div class="container1">
                <div class="box"  >
                   <a href="iota.html" target="iframe1"><img class="zoom" style="border-radius: 50%" src="img/clubs/iota_logo.jpg" height="15%" width="15%" title="IOTA"> </a>  
                </div>
