--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
    <head>
       <title>Student Resources | IIITS</title>
       <meta charset="UTF-8">
-    <meta name="viewport" content="width=displaywidth,initial-scale=1.0">
-    <meta name="refresh" content="30.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+   <!--- <meta http-equiv="refresh" content="3;contact.html" >  --->
     <meta name="author" content="venky">
       <style>
 body{
@@ -22,7 +22,7 @@ background-color: #e6ffff;
     width: 20%;
 }
 
-.container{
+.container1{
 width: auto;
 margin: auto;
 overflow: hidden;
@@ -61,6 +61,7 @@ nav li a{
 nav li a:hover{
 color:#e8491d;
 background-color:black;
+border-bottom: 2px solid red; 
 }
 nav li a:active{
 color:orange;
@@ -136,7 +137,94 @@ color: #ffffff;
 background: #35424a;
 border-top: #D8D8D8 3px solid;
 }
-      </style>
+
+
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  border-radius:10px;
+}
+
+button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  border-radius:10px;
+}
+
+button:hover {
+  opacity: 0.6;
+}
+
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+  position: relative;
+}
+
+
+.container {
+  padding: 16px;
+}
+
+span.psw {
+  float: right;
+  padding-top: 16px;
+  color:black;
+}
+
+.modal {
+  display: none; 
+  position: fixed; /* Stay in place */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button (x) */
+.close {
+  position: fixed;
+  right: 25px;
+  color: orange;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: red;
+  cursor: pointer;
+
+
+
+   </style>
    </head>
    <body style="background-color: #ffe066;">
       <header style="position:fixed;top:0px;width:100%;">
