--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
    <!--- <meta http-equiv="refresh" content="3;contact.html" >  --->
+    <link rel="shortcut icon" href="img/iiits/iiits logo.png" />
     <meta name="author" content="venky">
       <style>
 body{
