--- a/index.html
+++ b/index.html
@@ -374,6 +374,9 @@ span.psw {
                 Sri City, <br>
                 Andhra Pradesh<br> 
                 PIN :- 517646
+		    or 
+		PIN :- 517541
+		
             </p>            
           </div>
           </div>
